<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Shop by Category">
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_lasers"
                    android:icon="@drawable/laser_icon"
                    android:title="@string/category_1" />
                <item
                    android:id="@+id/nav_lairs"
                    android:icon="@drawable/lair_icon"
                    android:title="@string/category_2" />
                <item
                    android:id="@+id/nav_traps"
                    android:icon="@drawable/trap_icon"
                    android:title="@string/category_3" />
                <item
                    android:id="@+id/nav_henchmen"
                    android:icon="@drawable/henchmen_icon"
                    android:title="@string/category_4" />
                <item
                    android:id="@+id/nav_monologues"
                    android:icon="@drawable/monologue_icon"
                    android:title="@string/category_5" />
            </group>
    </item>

</menu>